Added config guide

--- a/tutorial-microprofile.html
+++ b/tutorial-microprofile.html
@@ -40,7 +40,9 @@
             <a href="#configuring-microservices" aria-hidden="true" class="anchor" id="user-content-configuring-microservices">
             </a>Configuring Microservices</h3>
         <p>Learn how to inject external static and dynamic configuration to microservices using MicroProfile Config.</p>
-        <p>The Guide:</p>
+        <p>The Guide: 
+            <a href="./Configuring microservices - Open Liberty.html" rel="nofollow">Configuring microservices</a>
+        </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-config">https://github.com/OpenLiberty/draft-guide-microprofile-config</a>
         </p>
@@ -53,7 +55,9 @@
             </a>Handling failures with Fault Tolerance</h3>
         <p>Learn how to use the MicroProfile Fault Tolerance specification to enable applications to function even when one
             of the microservices is unavailable.</p>
-        <p>The Guide:</p>
+        <p>The Guide: 
+             <a href="" rel="nofollow"></a>
+        </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-faulttolerance-intro">https://github.com/OpenLiberty/draft-guide-microprofile-faulttolerance-intro</a>
         </p>
@@ -65,7 +69,9 @@
             <a href="#securing-microservices-with-json-web-tokens-jwt" aria-hidden="true" class="anchor" id="user-content-securing-microservices-with-json-web-tokens-jwt">
             </a>Securing microservices with JSON Web Tokens (JWT)</h3>
         <p>Learn how to control user and role access to microservices using MicroProfile JWT.</p>
-        <p>The Guide:</p>
+        <p>The Guide: 
+            <a href="" rel="nofollow"></a>
+       </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-jwt">https://github.com/OpenLiberty/draft-guide-microprofile-jwt</a>
         </p>
@@ -73,7 +79,9 @@
             <a href="#providing-metrics-from-a-microservice" aria-hidden="true" class="anchor" id="user-content-providing-metrics-from-a-microservice">
             </a>Providing metrics from a microservice</h3>
         <p>Learn how to provide system and application metrics from a microservice using MicroProfile Metrics.</p>
-        <p>The Guide:</p>
+        <p>The Guide: 
+            <a href="" rel="nofollow"></a>
+       </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-metrics">https://github.com/OpenLiberty/draft-guide-microprofile-metrics</a>
         </p>
@@ -81,7 +89,9 @@
             <a href="#adding-health-reporting-to-a-microservice" aria-hidden="true" class="anchor" id="user-content-adding-health-reporting-to-a-microservice">
             </a>Adding health reporting to a microservice</h3>
         <p>Learn how to provide and check the health of a microservice using MicroProfile Health.</p>
-        <p>The Guide:</p>
+        <p>The Guide: 
+            <a href="" rel="nofollow"></a>
+       </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-health">https://github.com/OpenLiberty/draft-guide-microprofile-health</a>
         </p>
