Adding fault tolerance and a couple of minor edits on the others

--- a/tutorial-microprofile.html
+++ b/tutorial-microprofile.html
@@ -21,7 +21,7 @@
             </a>Creating a RESTful web service</h3>
         <p>Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty that will expose the JVM’s system properties.</p>
         <p>The Guide:
-            <a href="https://openliberty.io/guides/rest-intro.html" rel="nofollow">https://openliberty.io/guides/rest-intro.html</a>
+            <a href="https://openliberty.io/guides/rest-intro.html" rel="nofollow">Creating a RESTful web service</a>
         </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/guide-rest-intro">https://github.com/OpenLiberty/guide-rest-intro</a>
@@ -56,7 +56,7 @@
         <p>Learn how to use the MicroProfile Fault Tolerance specification to enable applications to function even when one
             of the microservices is unavailable.</p>
         <p>The Guide: 
-             <a href="" rel="nofollow"></a>
+             <a href="./Handling failures with Fault Tolerance - Open Liberty.html" rel="nofollow">Handling failures with Fault Tolerance</a>
         </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-faulttolerance-intro">https://github.com/OpenLiberty/draft-guide-microprofile-faulttolerance-intro</a>
