Added Metrics guide

--- a/tutorial-microprofile.html
+++ b/tutorial-microprofile.html
@@ -80,7 +80,7 @@
             </a>Providing metrics from a microservice</h3>
         <p>Learn how to provide system and application metrics from a microservice using MicroProfile Metrics.</p>
         <p>The Guide: 
-            <a href="" rel="nofollow"></a>
+            <a href="./Providing metrics from a microservice - Open Liberty.html" rel="nofollow">Providing metrics from a microservice</a>
        </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-metrics">https://github.com/OpenLiberty/draft-guide-microprofile-metrics</a>
