Added Health guide

--- a/tutorial-microprofile.html
+++ b/tutorial-microprofile.html
@@ -90,7 +90,7 @@
             </a>Adding health reporting to a microservice</h3>
         <p>Learn how to provide and check the health of a microservice using MicroProfile Health.</p>
         <p>The Guide: 
-            <a href="" rel="nofollow"></a>
+            <a href="./Adding health reporting to a microservice - Open Liberty.html" rel="nofollow">Adding health reporting to a microservice</a>
        </p>
         <p>If you have feedback or find problems, please raise an issue here:
             <a href="https://github.com/OpenLiberty/draft-guide-microprofile-health">https://github.com/OpenLiberty/draft-guide-microprofile-health</a>
