Wrong reference to microprofile-health-api
instead of microprofile-metrics-api

--- a/Providing metrics from a microservice - Open Liberty.html
+++ b/Providing metrics from a microservice - Open Liberty.html
@@ -216,7 +216,7 @@ application metrics will not show up if you do not point your browser first to
 <h2 id="adding-microprofile-metrics-to-inventory-application">Adding Microprofile Metrics to inventory application</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Begin by navigating to the <code>pom.xml</code> file to check the required dependency. The <code>microprofile-health-api</code>
+<p>Begin by navigating to the <code>pom.xml</code> file to check the required dependency. The <code>microprofile-metrics-api</code>
 dependency has been added for you in the <code>start/pom.xml</code> file. This dependency allows you to
 use the MicroProfile Metrics API to provide the metrics from your RESTful services. Also, the system property <code>javax.net.ssl.trustStore</code> was set for you to point to the SSL certificate.</p>
 </div>
