--- a/Handling failures with Fault Tolerance - Open Liberty.html
+++ b/Handling failures with Fault Tolerance - Open Liberty.html
@@ -435,7 +435,7 @@ exception is thrown when an input or output operation is failed or interpreted.<
 <h3 id="adding-the-retry-and-fallback-annotations">Adding the @Retry and @Fallback annotations</h3>
 <div class="paragraph">
 <p>Now that our inventory microservice is able to recognise that the system microservice has been taken
-down for maintenance through the 503 HTTP response retruned as a result and has thrown an IOException
+down for maintenance through the 503 HTTP response returned as a result and has thrown an IOException
 as a result of this microservice being in maintanence, a fallback method needs to be set out.
 Create the inventory manager class in the <code>start/src/main/java/io/openliberty/guides/inventory/InventoryManager.java</code> file:</p>
 </div>
